--- a/SistemaAcademico/nbproject/project.properties
+++ b/SistemaAcademico/nbproject/project.properties
@@ -30,6 +30,7 @@ excludes=
 file.reference.derby.jar=C:\\Program Files\\Java\\jdk1.8.0_40\\db\\lib\\derby.jar
 file.reference.derbyclient.jar=C:\\Program Files\\Java\\jdk1.8.0_40\\db\\lib\\derbyclient.jar
 file.reference.jandex-1.1.0.final.jar=C:\\Users\\JeanPablo\\Desktop\\Jean Pablo\\UFES\\2015-1\\Programa\u00e7\u00e3o Orientada ao Objeto\\TRABALHO 2\\jandex-1.1.0.final.jar
+file.reference.mysql-connector-java-5.1.20.zip=C:\\Users\\JeanPablo\\Desktop\\Jean Pablo\\UFES\\2015-1\\Programa\u00e7\u00e3o Orientada ao Objeto\\TRABALHO 2\\mysql-connector-java-5.1.20.zip
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -37,7 +38,8 @@ javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${file.reference.derbyclient.jar}:\
     ${file.reference.derby.jar}:\
-    ${file.reference.jandex-1.1.0.final.jar}
+    ${file.reference.jandex-1.1.0.final.jar}:\
+    ${file.reference.mysql-connector-java-5.1.20.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
