--- a/SistemaAcademico/nbproject/project.properties
+++ b/SistemaAcademico/nbproject/project.properties
@@ -27,19 +27,18 @@ dist.dir=dist
 dist.jar=${dist.dir}/SistemaAcademico.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.derby.jar=C:\\Program Files\\Java\\jdk1.8.0_40\\db\\lib\\derby.jar
-file.reference.derbyclient.jar=C:\\Program Files\\Java\\jdk1.8.0_40\\db\\lib\\derbyclient.jar
-file.reference.jandex-1.1.0.final.jar=C:\\Users\\JeanPablo\\Desktop\\Jean Pablo\\UFES\\2015-1\\Programa\u00e7\u00e3o Orientada ao Objeto\\TRABALHO 2\\jandex-1.1.0.final.jar
-file.reference.mysql-connector-java-5.1.20.zip=C:\\Users\\JeanPablo\\Desktop\\Jean Pablo\\UFES\\2015-1\\Programa\u00e7\u00e3o Orientada ao Objeto\\TRABALHO 2\\mysql-connector-java-5.1.20.zip
+file.reference.jandex-1.1.0.final.jar=C:\\Users\\Filipe\\Desktop\\jandex-1.1.0.final.jar
+file.reference.mysql-connector-java-5.1.20.zip=C:\\Users\\Filipe\\Downloads\\mysql-connector-java-5.1.20.zip
+file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 8.0.2\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.hibernate4-persistence.classpath}:\
     ${libs.hibernate4-support.classpath}:\
-    ${file.reference.derbyclient.jar}:\
-    ${file.reference.derby.jar}:\
+    ${libs.MySQLDriver.classpath}:\
     ${file.reference.jandex-1.1.0.final.jar}:\
-    ${file.reference.mysql-connector-java-5.1.20.zip}
+    ${file.reference.mysql-connector-java-5.1.20.zip}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
